synthizer-sys/synthizer-vendored/include/synthizer.h

/*
 * Note to maintainers: C API methods that obviously go with  a type live in the main .cpp file for that type, even if it is necessary to introduce a cpp file for that type to hold the C API (i.e. pure abstract classes).
 * 
 * Other methods are in src/c_api.cpp (i.e. generic property setters, initialization, etc.).
 * */

/*
 * A handle to any Synthizer object. Always nonzero.
 * */
typedef unsigned long long syz_Handle;
/*
 * An error. code. Specific error constants TBD. 0 means success.
 * */
typedef int syz_ErrorCode;
/*
 * Biquad properties are biquad filters from the audio eq cookbook.
 * 
 * Note to maintainers: the C API is in src/filter_properties.cpp (except for syz_setBiquad, in c_api.cpp with the other property setters).
 * */

/*
 * Configuration for a filter. Currently this struct should be treated as opaque. It's exposed here
 * in order to allow allocating them on the stack.  Changes to the layout and fields may occur without warning.
 * 
 * To initialize this struct, use one of the syz_BiquadDesignXXX functions, below.
 * */
struct syz_BiquadConfig {
	double _b0, _b1, _b2;
	double _a1, _a2;
	double _gain;
	unsigned char _is_wire;
};
SYZ_CAPI syz_ErrorCode syz_getBiquad(struct syz_BiquadConfig *filter, syz_Handle target, int property);
SYZ_CAPI syz_ErrorCode syz_setBiquad(syz_Handle target, int property, const struct syz_BiquadConfig *filter);
/*
 * Biquad filter design functions.  See the audio eq cookbook in the manual's appendices for the specific mathematical formulas.
 *
 * q is a measure of resonance.  Generally q = 0.5 is a filter that doesn't resonate and q at or above 1 resonates too much to be useful.
 * q = 0.7071135624381276 gives second-order Butterworth lowpass and highpass filters, and is the suggested default.
 * 
 * Synthizer's Nyquist is 22050 HZ.
 * */
SYZ_CAPI syz_ErrorCode syz_biquadDesignIdentity(struct syz_BiquadConfig *filter);
SYZ_CAPI syz_ErrorCode syz_biquadDesignLowpass(struct syz_BiquadConfig *filter, double frequency, double q);
SYZ_CAPI syz_ErrorCode syz_biquadDesignHighpass(struct syz_BiquadConfig *filter, double frequency, double q);
/*
 * bw is the bandwidth between -3 db frequencies.
 * */
SYZ_CAPI syz_ErrorCode syz_biquadDesignBandpass(struct syz_BiquadConfig *filter, double frequency, double bw);