synthizer-sys/src/synthizer.rs

#[test]
fn bindgen_test_layout_syz_BiquadConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_BiquadConfig>(),
        56usize,
        concat!("Size of: ", stringify!(syz_BiquadConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_BiquadConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_BiquadConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._b0 as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_b0)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._b1 as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_b1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._b2 as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_b2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._a1 as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_a1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._a2 as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_a2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._gain as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_gain)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_BiquadConfig>()))._is_wire as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_BiquadConfig),
            "::",
            stringify!(_is_wire)
        )
    );
}
extern "C" {
    pub fn syz_getBiquad(
        filter: *mut syz_BiquadConfig,
        target: syz_Handle,
        property: ::std::os::raw::c_int,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_setBiquad(
        target: syz_Handle,
        property: ::std::os::raw::c_int,
        filter: *const syz_BiquadConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_biquadDesignIdentity(filter: *mut syz_BiquadConfig) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_biquadDesignLowpass(
        filter: *mut syz_BiquadConfig,
        frequency: f64,
        q: f64,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_biquadDesignHighpass(
        filter: *mut syz_BiquadConfig,
        frequency: f64,
        q: f64,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_biquadDesignBandpass(
        filter: *mut syz_BiquadConfig,
        frequency: f64,
        bw: f64,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_AutomationPoint {
    pub interpolation_type: ::std::os::raw::c_int,
    pub values: [f64; 6usize],
    pub flags: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_syz_AutomationPoint() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationPoint>(),
        64usize,
        concat!("Size of: ", stringify!(syz_AutomationPoint))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationPoint>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_AutomationPoint))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationPoint>())).interpolation_type as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationPoint),
            "::",
            stringify!(interpolation_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationPoint>())).values as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationPoint),
            "::",
            stringify!(values)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_AutomationPoint>())).flags as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationPoint),
            "::",
            stringify!(flags)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_AutomationAppendPropertyCommand {
    pub property: ::std::os::raw::c_int,
    pub point: syz_AutomationPoint,
}
#[test]
fn bindgen_test_layout_syz_AutomationAppendPropertyCommand() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationAppendPropertyCommand>(),
        72usize,
        concat!("Size of: ", stringify!(syz_AutomationAppendPropertyCommand))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationAppendPropertyCommand>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(syz_AutomationAppendPropertyCommand)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationAppendPropertyCommand>())).property as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationAppendPropertyCommand),
            "::",
            stringify!(property)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationAppendPropertyCommand>())).point as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationAppendPropertyCommand),
            "::",
            stringify!(point)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_AutomationClearPropertyCommand {
    pub property: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_syz_AutomationClearPropertyCommand() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationClearPropertyCommand>(),
        4usize,
        concat!("Size of: ", stringify!(syz_AutomationClearPropertyCommand))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationClearPropertyCommand>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(syz_AutomationClearPropertyCommand)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationClearPropertyCommand>())).property as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationClearPropertyCommand),
            "::",
            stringify!(property)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct syz_AutomationSendUserEventCommand {
    pub param: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_syz_AutomationSendUserEventCommand() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationSendUserEventCommand>(),
        8usize,
        concat!("Size of: ", stringify!(syz_AutomationSendUserEventCommand))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationSendUserEventCommand>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(syz_AutomationSendUserEventCommand)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationSendUserEventCommand>())).param as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationSendUserEventCommand),
            "::",
            stringify!(param)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union syz_AutomationCommandParams {
    pub append_to_property: syz_AutomationAppendPropertyCommand,
    pub clear_property: syz_AutomationClearPropertyCommand,
    pub send_user_event: syz_AutomationSendUserEventCommand,
}
#[test]
fn bindgen_test_layout_syz_AutomationCommandParams() {
    assert_eq!(
        ::std::mem::size_of::<syz_AutomationCommandParams>(),
        72usize,
        concat!("Size of: ", stringify!(syz_AutomationCommandParams))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_AutomationCommandParams>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_AutomationCommandParams))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationCommandParams>())).append_to_property as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommandParams),
            "::",
            stringify!(append_to_property)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationCommandParams>())).clear_property as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommandParams),
            "::",
            stringify!(clear_property)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<syz_AutomationCommandParams>())).send_user_event as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_AutomationCommandParams),
            "::",
            stringify!(send_user_event)
        )
    );
}
impl Default for syz_AutomationCommandParams {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct syz_AutomationCommand {
    pub target: syz_Handle,
    pub time: f64,
    pub type_: ::std::os::raw::c_int,
    pub flags: ::std::os::raw::c_uint,
    pub params: syz_AutomationCommandParams,
}
